// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Colors should generate code snippet 1`] = `
Object {
  "code": "const colors = {
  RED: \\"#ff0000\\",
  GREEN: \\"#00ff00\\",
  BLUE: \\"#0000ff\\",
  YELLOW: \\"#ffff00\\",
  BLACK: \\"#000000\\",
  BLACK_50: \\"rgba(0, 0, 0, 0.5)\\",
  WHITE: \\"#ffffff\\"
};",
  "language": "javascript",
}
`;

exports[`Colors should generate exportable file 1`] = `
Object {
  "code": "const colors = {
  RED: \\"#ff0000\\",
  GREEN: \\"#00ff00\\",
  BLUE: \\"#0000ff\\",
  YELLOW: \\"#ffff00\\",
  BLACK: \\"#000000\\",
  BLACK_50: \\"rgba(0, 0, 0, 0.5)\\",
  WHITE: \\"#ffffff\\"
};",
  "filename": "colors.js",
  "language": "javascript",
}
`;

exports[`Layer \`Exportable layer\` should generate code snippet 1`] = `
Object {
  "code": "const exportableLayer = {
  width: 100,
  height: 100,
  backgroundColor: colors.YELLOW
};",
  "language": "javascript",
}
`;

exports[`Layer \`Layer with blur\` should generate code snippet 1`] = `
Object {
  "code": "const layerWithBlur = {
  width: 100,
  height: 100,
  backgroundColor: \\"#00ffff\\"
};",
  "language": "javascript",
}
`;

exports[`Layer \`Layer with border radius\` should generate code snippet 1`] = `
Object {
  "code": "const layerWithBorderRadius = {
  width: 100,
  height: 100,
  borderRadius: 20,
  backgroundColor: colors.RED
};",
  "language": "javascript",
}
`;

exports[`Layer \`Layer with border\` should generate code snippet 1`] = `
Object {
  "code": "const layerWithBorder = {
  width: 100,
  height: 100,
  borderStyle: \\"solid\\",
  borderWidth: 2,
  borderColor: colors.BLACK
};",
  "language": "javascript",
}
`;

exports[`Layer \`Layer with fill\` should generate code snippet 1`] = `
Object {
  "code": "const layerWithFill = {
  width: 100,
  height: 100,
  backgroundColor: colors.BLUE
};",
  "language": "javascript",
}
`;

exports[`Layer \`Layer with gradient border\` should generate code snippet 1`] = `
Object {
  "code": "const layerWithGradientBorder = {
  width: 100,
  height: 100
};",
  "language": "javascript",
}
`;

exports[`Layer \`Layer with gradient fill\` should generate code snippet 1`] = `
Object {
  "code": "const layerWithGradientFill = {
  width: 100,
  height: 100
};",
  "language": "javascript",
}
`;

exports[`Layer \`Layer with shadow\` should generate code snippet 1`] = `
Object {
  "code": "const layerWithShadow = {
  width: 100,
  height: 100,
  shadowColor: colors.BLACK_50,
  shadowOffset: {
    width: 0,
    height: 2
  },
  shadowRadius: 4,
  shadowOpacity: 1
};",
  "language": "javascript",
}
`;

exports[`Layer \`Rotated layer\` should generate code snippet 1`] = `
Object {
  "code": "const rotatedLayer = {
  width: 103,
  height: 100,
  transform: \\"rotate(45deg)\\",
  backgroundColor: colors.GREEN
};",
  "language": "javascript",
}
`;

exports[`Layer \`Sample layer\` should generate code snippet 1`] = `
Object {
  "code": "const sampleLayer = {
  width: 320,
  height: 768
};",
  "language": "javascript",
}
`;

exports[`Layer \`Text layer with multiple styles\` should generate code snippet 1`] = `
Object {
  "code": "const textLayerWithMultipleStyles = {
  width: 220,
  height: 24,
  fontFamily: \\"SFProText\\",
  fontSize: 20,
  fontWeight: \\"normal\\",
  fontStyle: \\"normal\\",
  letterSpacing: 0,
  textAlign: \\"left\\",
  color: colors.BLACK
};",
  "language": "javascript",
}
`;

exports[`Layer \`Text layer\` should generate code snippet 1`] = `
Object {
  "code": "const textLayer = {
  width: 220,
  height: 24,
  fontFamily: \\"SFProText\\",
  fontSize: 20,
  fontWeight: \\"normal\\",
  fontStyle: \\"normal\\",
  letterSpacing: 0,
  textAlign: \\"left\\",
  color: colors.BLACK
};",
  "language": "javascript",
}
`;

exports[`Layer \`Transparent layer with blend mode\` should generate code snippet 1`] = `
Object {
  "code": "const transparentLayerWithBlendMode = {
  width: 103,
  height: 100,
  opacity: 0.3,
  backgroundColor: colors.GREEN
};",
  "language": "javascript",
}
`;

exports[`Text Styles should generate code snippet 1`] = `
Object {
  "code": "const textStyles = StyleSheet.create({
  sampleTextStyleWithColor: {
    fontFamily: \\"SFProText\\",
    fontSize: 20,
    fontWeight: \\"normal\\",
    fontStyle: \\"normal\\",
    letterSpacing: 0,
    textAlign: \\"left\\",
    color: colors.RED
  },
  sampleTextStyle: {
    fontFamily: \\"SFProText\\",
    fontSize: 20,
    fontWeight: \\"normal\\",
    fontStyle: \\"normal\\",
    letterSpacing: 0,
    textAlign: \\"left\\",
    color: colors.BLACK
  }
});",
  "language": "javascript",
}
`;

exports[`Text Styles should generate exportable file 1`] = `
Object {
  "code": "const textStyles = StyleSheet.create({
  sampleTextStyleWithColor: {
    fontFamily: \\"SFProText\\",
    fontSize: 20,
    fontWeight: \\"normal\\",
    fontStyle: \\"normal\\",
    letterSpacing: 0,
    textAlign: \\"left\\",
    color: colors.RED
  },
  sampleTextStyle: {
    fontFamily: \\"SFProText\\",
    fontSize: 20,
    fontWeight: \\"normal\\",
    fontStyle: \\"normal\\",
    letterSpacing: 0,
    textAlign: \\"left\\",
    color: colors.BLACK
  }
});",
  "filename": "fonts.js",
  "language": "javascript",
}
`;
